# pascal-compiler

./: .gitignore  Cargo.toml  README.md
programs/: bubble.pas  constants.pas  dectobin.pas  fib.pas  hello.pas  sched.pas
src/: ast.rs  cli.yml  codegen.rs  lexer.rs  main.rs  pascal.lalrpop  semantic.rs  token.rs
