[package]
name = "pascal-kursach"
version = "0.1.0"
authors = ["Andrey Ivanov <andreymgn@protonmail.ch>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.16.3"

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
lalrpop-util = "0.16.3"
regex = "1.1.6"
lazy_static = "1.3.0"
llvm-sys = "60.0.0"
